# artifacts/api-server/src/routes/index.ts
@@ -10,6 +10,7 @@ import gmailRouter from "./gmail";
 import profileRouter from "./profile";
 import settingsRouter from "./settings";
 import feedbackRouter from "./feedback";
+import groupsRouter from "./groups";
 
 const router: IRouter = Router();
 
@@ -24,5 +25,6 @@ router.use("/gmail", gmailRouter);
 router.use("/profile", profileRouter);
 router.use("/settings", settingsRouter);
 router.use("/feedback", feedbackRouter);
+router.use("/groups", groupsRouter);
 
 export default router;
